build: Update pom.xml and module-info.java for io.github.seanchatmangpt:jotp namespace